change query records api & finsish delete & half of update operation
