# backend/models/Match/Data.js
@@ -2,45 +2,43 @@ import mongoose from "mongoose";
 import User from "../User";
 
 const dataSchema = new mongoose.Schema({
+  name: { type: String, required: [true, '"name" field is required'] },
   player: { type: mongoose.Types.ObjectId, ref: User },
-
   passesOrSets: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"passingOrSetting" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"passesOrSets" field is required'],
   },
   serveReceptions: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"serveReception" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"serveReceptions" field is required'],
   },
-
   attacks: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"attacking" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"attacks" field is required'],
   },
-
   drops: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"drop" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"drops" field is required'],
   },
-
   serves: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"serve" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"serves" field is required'],
   },
-
   blocks: {
-    type: mongoose.Types.ObjectId,
-    required: [true, '"block" field is required'],
+    type: Map,
+    of: Number,
+    required: [true, '"blocks" field is required'],
   },
-
   faults: {
-    type: [Number],
-    required: [true, '"faultTimes" field is required'],
+    type: Map,
+    required: [true, '"faults" field is required'],
   },
-
-  notes: {
-    type: String,
-  },
+  notes: { type: String },
 });
 
 export default mongoose.model("Data", dataSchema);
